# fuzzy-truck

./: README.md  pyproject.toml  run.py
fuzzy_truck/: __init__.py  driver.py
notebooks/: testing_pyfuzzy.ipynb
tests/: test_fuzzy_truck.py
